fix(projects) search box alignment on English version

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_solutii.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_solutii.scss
@@ -299,8 +299,8 @@ $albaRed: #cc3234;
     width: 100%;
   }
 
-  .solutii .filters .search-box-wrapper,
-  .projects .filters #search-box-wrapper {
+  .projects .filters .search-box-wrapper,
+  .solutii .filters .search-box-wrapper {
     margin-top: 25px;
   }
 
